# mi_proyecto

./: README.md  app.py  mejoras.patch  portal_jurisprudencia_er_1.jsx  pyproject.toml  resultado_jurisprudencia.html
output/: documento_juridico.html  report.html  report.md
src/mi_proyecto/: crew.py  main.py
src/mi_proyecto/config/: agents.yaml  tasks.yaml
src/mi_proyecto/tools/: captcha_tool.py  jurisprudencia_publica_tool.py
