[project]
name = "mi_proyecto"
version = "0.1.0"
description = "mi_proyecto using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "easyocr>=1.7.2",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "playwright>=1.59.0",
]

[project.scripts]
mi_proyecto = "mi_proyecto.main:run"
run_crew = "mi_proyecto.main:run"
train = "mi_proyecto.main:train"
replay = "mi_proyecto.main:replay"
test = "mi_proyecto.main:test"
run_with_trigger = "mi_proyecto.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
